[gd_scene load_steps=4 format=3 uid="uid://bj23i3y6kyum3"]

[ext_resource type="Texture2D" uid="uid://btqoe58gqyg05" path="res://assets/roguelikeSheet_transparent.png" id="1_63lhk"]
[ext_resource type="Script" uid="uid://ji1jggqbyg7h" path="res://scripts/puzzle_rock.gd" id="1_tx4kr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx4kr"]
size = Vector2(16, 16)

[node name="puzzle_rock" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
collision_mask = 11
script = ExtResource("1_tx4kr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_63lhk")
region_enabled = true
region_rect = Rect2(939, 514, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tx4kr")

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-11, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(11, 0)

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -11)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 11)
